修改细节以支持打包

--- a/data/web/client/src/App.css
+++ b/data/web/client/src/App.css
@@ -1,3 +1,8 @@
+body
+{
+  font-family: "Hiragino Sans GB","Microsoft YaHei","微软雅黑",Georgia,tahoma,arial,simsun,"宋体";
+}
+
 .App
 {
   display: flex;
